deploy/overlays/tst/jupyter/jupyter-zib-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: jupyter-gateway
spec:
  gatewayClassName: traefik
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      hostname: jupyter.tst.dh.unimaas.nl
      tls:
        mode: Terminate
        certificateRefs:
          - name: jupyter-tls-secret
    - name: http
      port: 80
      protocol: HTTP
      hostname: jupyter.tst.dh.unimaas.nl
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jupyter-route
spec:
  parentRefs:
    - name: jupyter-gateway
  hostnames:
    - jupyter.tst.dh.unimaas.nl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jupyter-zib
          port: 8888
